[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
hex = "0.4"
base64 = "0.13"
bincode = "1.3"
methods = { path = "../methods" }
rand = "0.8"
risc0-zkvm = "0.14"
serde = { version = "1.0", features = ["derive"] }
wordle-core = { path = "../core" }
serde_json = "1.0.95"
