[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.2"
hex = "0.4.3"
rand = "0.8.5"
serde = "1.0.159"
serde_json = "1.0.95"
sha256 = "1.1.2"
tokio = { version = "1", features = ["full"] }