[package]
name = "wasm-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
risc0-zkp = { version = "0.14", default-features = false }
risc0-zkvm = { version = "0.14", default-features = false }
base64 = "0.13"
bincode = "1.3"
hex = "0.4"
wasm-bindgen = "0.2.78"
wordle-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3.53", features = ["console"] }
